HFP-2541 Fix Dialog scrollbar on small dialogs

--- a/styles/h5p.css
+++ b/styles/h5p.css
@@ -260,7 +260,7 @@ div.h5p-fullscreen {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   z-index: 100;
   padding: 2em;
   box-sizing: border-box;
@@ -303,12 +303,13 @@ div.h5p-fullscreen {
   font-size: 12px;
   margin-left: 1em;
 }
-.h5p-embed-dialog .h5p-inner {
+.h5p-embed-dialog .h5p-inner,
+.h5p-reuse-dialog .h5p-inner,
+.h5p-content-user-data-reset-dialog .h5p-inner {
   width: 300px;
   left: 50%;
   top: 50%;
   margin: 0 0 0 -150px;
-  transition: margin 250ms linear 100ms;
 }
 .h5p-embed-dialog .h5p-embed-code-container,
 .h5p-embed-size {
@@ -344,12 +345,14 @@ div.h5p-fullscreen {
   padding: 1em;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  height: 100%;
+  color: #555555;
+  z-index: 1;
+}
+.h5p-popup-dialog.h5p-open .h5p-scroll-content {
   overflow: auto;
   overflow-x: hidden;
   overflow-y: auto;
-  color: #555555;
-  z-index: 1;
+  height: 100%;
 }
 .h5p-popup-dialog .h5p-scroll-content::-webkit-scrollbar {
   width: 8px;
@@ -516,6 +519,8 @@ div.h5p-fullscreen {
   padding: 0.5em;
   position: absolute;
   top: -1em;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /* This is loaded as part of Core and not Editor since this needs to be outside the editor iframe */
